--- a/flask_app/templates/create.html
+++ b/flask_app/templates/create.html
@@ -32,8 +32,11 @@
                 <input type="text" class="form-control" name="email">
             </div>
 
-            <div>
+            <div class="d-flex justify-content-between">
+                <div>
                 <a href="/add"><button type="submit" class="btn btn-primary">Add a New User</button></a>
+                </div>
+                <a href="/" class="btn btn-primary">Home</a>
             </div>
         </form>
 
